syntax = "proto3";

package com.esb.userLocation;

import "google/protobuf/timestamp.proto";


message userDetailsLogMessage {
    string first_name = 1;
    string last_name = 2;
    google.protobuf.Timestamp event_timestamp = 3;

}

message userLocationLogMessage {
    google.protobuf.Timestamp event_timestamp = 3;

}